metadata/force-app/main/default/objects/CustomName_YOHmR__c/CustomName_YOHmR__c.object-meta.xml
<CustomObject>
    <description>Description_iemeR</description>
    <label>CustomLabel_KPVIZ</label>
    <nameField>
        <label>CustomLabel_KPVIZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_KPVIZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>