metadata/force-app/main/default/objects/CustomName_YOHmR__c/fields/CustomField_aUjRf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aUjRf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYguZk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>