metadata/force-app/main/default/objects/CustomName_YOHmR__c/fields/CustomField_qZInS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qZInS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUBFrn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>